# nvbitPERfi

./: .gitmodules  README.md  profile.sh  runPERfi.sh  test_pf.sh
common/: arch.h  globals.h
pf_err_injector/: Makefile  pf_injector.h
pf_injector/: .gitignore  Makefile  commom.py  inject_funcs.cu  pf_injector.cu  pf_injector.h
pf_injector_icoc/: Makefile  inject_funcs.cu  pf_injector.cu  pf_injector.h
pf_injector_int_units_instruction/: Makefile  inject_funcs.cu  pf_injector.cu  pf_injector.h
pf_injector_register_file/: .gitignore  Makefile  inject_funcs.cu  pf_injector.cu  pf_injector.h
profiler/: .gitignore  Makefile  inject_funcs.cu  profiler.cu
profiler_CNN/: .gitignore  Makefile  inject_funcs.cu  profiler_CNN.cu  profiler_CNN.h
scripts/: .gitignore  Fsim_summary.py  List_reducer.py  Neural_classifier.py  Neural_list.py  Neural_parser.py  Neural_parser_V2.py  TGSIM.py  args.py  classifier.py  common_functions.py  compare_stdout.py  fault_models_config.yaml  generate_injection_list.py  params.py  parse_results.py  parser_pf.py  real_workloads_parameters.py  run_injections.py  run_one_injection.py  run_profiler.py
scripts/oldscripts/: fast_parameters.py  params.py  run_injections.py
scripts/parsers/: README.md  parse_pf_injections.py  show_avf.ipynb  untar_files.sh
test-apps/: .gitignore  configure_real_workloads.py
test-apps/Extract_Embeddings_CNNs/: AlexNet.py  LeNet.py  Pytorch_Ampere.yml  Run_Layer.py  nvbitfi_DNN.py  nvbitfi_DNN_TRT.py  run.sh  sdc_check.py  sdc_check.sh
test-apps/Jetson_TRT_CNNs/: AlexNet_onnx.py  AlexNet_tensorRT.py  LeNet.py  LeNet5_pytorch.onnx  LeNet5_pytorch.trt  LeNet_onnx.py  LeNet_tensorRT.py  Pytorch_JetsonNano.yml  README.md  pytorch2tensorrt.sh  run.sh  visiontransformer_onnx.py  visiontransformer_tensorRT.py
test-apps/Jetson_TRT_CNNs/checkpoint/: LeNet
test-apps/LeNet/: faults.list  run.sh  run_pf.sh  run_pf_profile.sh  sdc_check.sh  test100.list
test-apps/Pytorch_CNNs/: AlexNet.py  LeNet.py  MobileNetv3.py  ResNet_50.py  nvbitfi_DNN.py  run.sh  sdc_check.py  visiontransformer.py
test-apps/VectorAdd/: Makefile  run.sh  sdc_check.sh  vectorAdd.cu
test-apps/accl/: Makefile  run.sh  sdc_check.sh
test-apps/bfs/: Makefile  run.sh  sdc_check.sh
test-apps/bfs/src/: Parameters.cpp  bfs.cu  kernel.cu  main.cpp
test-apps/cfd/: Makefile  run.sh
test-apps/common/inc/: cuda_utils.h  device_vector.h
test-apps/common/include/: generic_log.h
test-apps/darknet_v3/: Makefile  coco2017_5_img_list.txt  download_and_set.sh  run.sh
test-apps/darknet_v3/src/: detection_gold.cpp  detection_gold.h  gemm.c
test-apps/gaussian/: Makefile  run.sh  sdc_check.sh
test-apps/gaussian/src/: Parameters.cpp  gaussian.cu  main.cpp
test-apps/gemm/: Makefile  run.sh
test-apps/gemm_cublas/: Makefile  debug_script.sh  gemm.cu  run.sh
test-apps/hotspot/: Makefile  run.sh  sdc_check.sh
test-apps/lava/: Makefile  cuda_lava.cu  run.sh
test-apps/libLogHelper/: CMakeLists.txt  README.md
test-apps/libLogHelper/cmake_install_scripts/: LogHelper.pc.in  Uninstall.cmake.in  atBoot.sh.in  post_install.sh  post_uninstall.sh  radiation-benchmarks.conf.in  rc.local.in
test-apps/libLogHelper/examples/: CMakeLists.txt  example_log.c  example_log.cpp  example_python.py
test-apps/libLogHelper/include/: common.hpp  env_vars.h  file_writer.hpp  log_helper.h
test-apps/libLogHelper/python_wrapper/: log_helper.i
test-apps/libLogHelper/src/: log_helper.cpp  log_helper_c_wrapper.cpp
test-apps/log_helper_dest/: README.md
test-apps/logs/VectorAdd/injection-list/: modeIRA1000.txt
test-apps/lud/: Makefile  run.sh  sdc_check.sh
test-apps/mergesort/: Makefile  bitonic.cu  main.cpp  mergeSort.cu  run.sh
test-apps/nw/: Makefile  run.sh
test-apps/nw/src/: needle.cu
test-apps/quicksort/: Makefile  cdpAdvancedQuicksort.cu  run.sh
test-apps/real_workloads/: configure_real_workloads.py
test-apps/real_workloads/bfs/src/: kernel2.cu
test-apps/real_workloads/gemm/: run.sh  sdc_check.sh
test-apps/real_workloads/lava/: cuda_lava.cu  run.sh
test-apps/real_workloads/libLogHelper/: CMakeLists.txt
test-apps/real_workloads/libLogHelper/include/: log_helper.hpp
test-apps/real_workloads/libLogHelper/src/: file_writer.cpp
